# Rumba

./: .gitignore  Cargo.toml  README.md  build_error.txt  config.example.toml
src/: config.rs  db.rs  diff.rs  lib.rs  main.rs  models.rs  pipeline.rs  scanner.rs  tape.rs
