[package]
name = "rumba"
version = "0.1.0"
edition = "2021"

[lib]
name = "rumba"
path = "src/lib.rs"

[[bin]]
name = "rumba"
path = "src/main.rs"

[[bin]]
name = "db-inspect"
path = "src/bin/db_inspect.rs"

[dependencies]
redb = "2.0"
rkyv = { version = "0.7", features = ["validation", "strict"] }
jwalk = "0.6"
blake3 = { version = "1.5", features = ["rayon", "mmap"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tar = "0.4"
zstd = "0.13"
byteorder = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.16"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
